--- a/angMuzickaLista/src/app/pjesma/pjesma.component.css
+++ b/angMuzickaLista/src/app/pjesma/pjesma.component.css
@@ -1,4 +1,42 @@
-.button{
-    float:right;  
-    margin:0 0 10px 0;
+body{
+    background:#0d47a1;
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    bottom: 0;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+
 }
+
+h2{
+margin-left:90px;
+color: white;
+padding-top: 20px;
+}
+.openn{
+    margin-left: 480px;
+    margin-top: 30px;
+}
+.table-responsive {
+    margin: 30px 0;
+  background-color: white;
+max-width: 1200px;
+margin-left: 100px;
+font-size: small;
+border-radius: 10px;
+  }
+  .table-wrapper {
+
+    min-width: 100px;
+    padding: 20px 25px;
+    
+  
+  }
+  #ikonice{
+    box-sizing:initial;
+    text-align: center;
+    padding-top: 18px;
+    width: 70px;
+  }
