--- a/angMuzickaLista/src/app/pjesma/pjesma.component.css
+++ b/angMuzickaLista/src/app/pjesma/pjesma.component.css
@@ -1,42 +1,36 @@
-body{
-    background:#0d47a1;
+  .all{
+    background-color:#0d47a1;
+    color: black;
     font-size: 15px;
     margin: 0;
     padding: 0;
     top: 0;
     bottom: 0;
+    height: auto;
     background-repeat: no-repeat;
-    box-sizing: border-box;
+    box-sizing: border-box;}
+  h2{
+    margin-left:90px;
+    color: white;
+    padding-top: 20px;}
+  .openn{
+   margin-left: 35%;
+   margin-top: 30px;}
 
-}
-
-h2{
-margin-left:90px;
-color: white;
-padding-top: 20px;
-}
-.openn{
-    margin-left: 480px;
-    margin-top: 30px;
-}
-.table-responsive {
-    margin: 30px 0;
-  background-color: white;
-max-width: 1200px;
-margin-left: 100px;
-font-size: small;
-border-radius: 10px;
-  }
-  .table-wrapper {
-
-    min-width: 100px;
-    padding: 20px 25px;
+  .table-responsive {
+  margin: 30px 0;
+  background-color:white;
+  max-width: 1200px;
+  margin-left: 7%;
+  font-size: small;
+  border-radius: 10px;
+  height: auto;}
     
-  
-  }
+  .table-wrapper {
+   min-width: 100px;
+   padding: 20px 25px;}
   #ikonice{
     box-sizing:initial;
     text-align: center;
     padding-top: 18px;
-    width: 70px;
-  }
+    width: 70px;}
