--- a/angMuzickaLista/src/app/pjesma/pjesma.component.html
+++ b/angMuzickaLista/src/app/pjesma/pjesma.component.html
@@ -1,17 +1,14 @@
-<body>
+<div class="all">
     <div id="headerDiv" class="table-title">
         <div class="row">
           <div class="col-sm-6">
             <h2>Moja muzička lista</h2>
           </div>
           <div class="openn">
-          <a href="#" class="btn btn-primary" data-toggle="modal" (click)="open(mymodal)">
-            Dodaj pjesmu
-          </a>
+          <a href="#" class="btn btn-primary" data-toggle="modal" (click)="open(mymodal)"> Dodaj pjesmu</a>   
         </div>
         </div>
       </div>
-
 <div class="table-responsive">
     <table class="table table-striped table-hover ">
         <thead>
@@ -31,14 +28,14 @@
             <tr *ngFor="let dataItem of PjesmeList">
                 <td>{{dataItem.nazivPjesme}}</td>
                 <td>{{dataItem.nazivIzvodjaca}}</td>
-                <td><a href="#" target="_blank">{{dataItem.url}}</a></td>
+                <td><a [href]="dataItem.url" target="_blank" >{{dataItem.url}}</a></td>
                 <td>{{dataItem.ocjena}}</td>
                 <td *ngIf="dataItem.favorit==true; else NijeFavorit"><i class="fa fa-check"> </i> DA </td>
                 <ng-template #NijeFavorit><td><i class="fa fa-times"></i> NE </td>
                 </ng-template>
                 <td>{{ dataItem.datumUnos | date: 'dd-MM-yyyy' }}</td>
                 <td>{{ dataItem.datumEditovanja | date: 'dd-MM-yyyy' }}</td>
-                <td>{{dataItem.Kategorija}}</td>
+                <td>{{ dataItem.kategorije}}</td>
                 <td id="ikonice"> 
                     <a href="#"  style="margin-right: 5px;"  (click)="openEditModal(mymodal,dataItem)"> <i class="material-icons" style="font-size: 24px;color:#FFC107;">&#xE254;</i></a>
                     <a herf="#"  (click)="deletePut(dataItem)"> <i class="material-icons" style="font-size: 24px;color:#E34724;">&#xE872;</i> </a><td>
@@ -46,7 +43,7 @@
         </tbody>
     </table>
 </div>
-</body>
+</div>
 
 <ng-template #mymodal let-modal>
     <div class="modal-header">
@@ -62,73 +59,47 @@
                     <div class="col-md-9">
                         <input type="text" id="nazivPjesme" name="nazivPjesme" class="form-control"
                             placeholder="Naziv pjesme" [(ngModel)]="pjesma.nazivPjesme" #nazivPjesme="ngModel">
-                          
-                        <!-- <span *ngIf="nazivPjesme.errors?.required && nazivDokumenta.touched">Polje je obavezno za unos</span>
-                             -->
-                    </div>
+              </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="nazivIzvodjaca">Naziv izvodjaca</label>
                     <div class="col-md-9">
                         <input type="text" id="nazivIzvodjaca" name="nazivIzvodjaca" class="form-control"
                             placeholder="Naziv izvodjaca"[(ngModel)]="pjesma.nazivIzvodjaca" required #nazivIzvodjaca="ngModel">
-                        
-                            <!-- <span *ngIf="nazivPjesme.errors?.required && nazivDokumenta.touched">Polje je obavezno za unos</span>
-                             -->
-                    </div>
+                   </div>
                 </div>
-
-                <div class="form-group row">
+              <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="url">URL</label>
                     <div class="col-md-9">
                         <input type="text" id="url" name="url" class="form-control" placeholder="url pjesme"
-                        [(ngModel)]="pjesma.url"
-                        required
-                        #url="ngModel"
-                        >
-                        <!-- <span *ngIf="nazivPjesme.errors?.required && nazivDokumenta.touched">Polje je obavezno za unos</span>
-                             -->
-                             
+                        [(ngModel)]="pjesma.url"#url="ngModel">     
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="ocjena">Ocjena</label>
                     <div class="col-md-9">
                         <input type="number" id="ocjena" name="ocjena" class="form-control" placeholder="ocjena"
-                        [(ngModel)]="pjesma.ocjena"
-                        required
-                        #ocjena="ngModel"
-                        >
-                        <!-- <span *ngIf="nazivPjesme.errors?.required && nazivDokumenta.touched">Polje je obavezno za unos</span>
-                             -->
-                    </div>
+                        [(ngModel)]="pjesma.ocjena" #ocjena="ngModel" >
+                  </div>
                 </div>
-
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label">Favorit</label>
                     <div class="col-md-9 col-form-label">
                         <div class="form-check">
                             <label>
                                 <input class="form-check-input" type="checkbox" name="favorit" id="favorit"
-                                [(ngModel)]="pjesma.favorit"
-                    #favorit="ngModel"
-                                >
+                                [(ngModel)]="pjesma.favorit" #favorit="ngModel">
                                 <span *ngIf="!PjesmeList.status">DA</span>
                                 <span *ngIf="PjesmeList.status">NE</span>
                             </label>
-
                         </div>
-
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="datumUnos">Datum unosa</label>
                     <div class="col-md-9">
                         <input id="datumUnos" name="datumUnos" class="form-control" placeholder="Datum unosa"
-                        [(ngModel)]="pjesma.datumUnos"
-                        required
-                        #datumUnos="ngModel"
-                        >
+                        [(ngModel)]="pjesma.datumUnos" #datumUnos="ngModel">
                     </div>
                 </div>
                 <div class="form-group row">
@@ -139,13 +110,12 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-md-3 col-form-label" for="kateogorije" >Kategorija</label>
+                    <label class="col-md-3 col-form-label" for="kategorije" >Kategorija</label>
                     <div class="col-md-9">
-                      <select id="kateogorije" name="kateogorije" class="form-control" [(ngModel)]="pjesma.kateogorije">
-                        <option value="" selected >--Odaberite--</option>
-                        <option *ngFor="let k of kategorije"value="{{k.kategorijaID}}"  ng-selected="k.nazivKategorije=='Kategorija'"></option>                
-                      </select>
-                      
+                      <select formControlName="nazivKategorije"  [(ngModel)]="pjesma.kategorijaID" >
+                        <option value="" selected>Odaberi</option>
+                        <option *ngFor="let k of kategorije"value="{{k.kategorijaID}}" >{{k.nazivKategorije}}</option>
+                      </select>                
                     </div>
                   </div>
                 </form>
@@ -153,9 +123,7 @@
         </div>
     </div>
     <div class="modal-footer">        
-         <!-- <button type="submit" class="btn btn-sm btn-primary"  (click)="save()"  [disabled]="!createForm.valid"><i class="fa fa-dot-circle-o"></i> Sačuvaj</button>
-         -->
+         <!-- <button type="submit" class="btn btn-sm btn-primary"  (click)="save()"  [disabled]="!createForm.valid"><i class="fa fa-dot-circle-o"></i> Sačuvaj</button>      -->
          <button type="reset" class="btn btn-sm btn-danger" (click)="modal.close('Save click')"><i class="fa fa-ban"></i> Odustani</button>
         </div> 
-
 </ng-template>
