--- a/angMuzickaLista/src/app/pjesma/pjesma.component.html
+++ b/angMuzickaLista/src/app/pjesma/pjesma.component.html
@@ -37,6 +37,7 @@
                 <td>{{ dataItem.datumEditovanja | date: 'dd-MM-yyyy' }}</td>
                 <td>{{dataItem.kategorije.nazivKategorije}}</td>
                 <td id="ikonice"> 
+
                     <a href="#"  style="margin-right: 5px;"  (click)="openEditModal(mymodal,dataItem)"> <i class="material-icons" style="font-size: 24px;color:#FFC107;">&#xE254;</i></a>
                     <a herf="#"  (click)="deletePut(dataItem)"> <i class="material-icons" style="font-size: 24px;color:#E34724;">&#xE872;</i> </a><td>
             </tr>
@@ -64,22 +65,22 @@
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="nazivIzvodjaca">Naziv izvodjaca</label>
                     <div class="col-md-9">
-                        <input type="text" id="nazivIzvodjaca" name="nazivIzvodjaca" class="form-control"
-                            placeholder="Naziv izvodjaca"[(ngModel)]="pjesma.nazivIzvodjaca" required #nazivIzvodjaca="ngModel">
+                        <input type="text" id="nazivIzvodjaca" name="nazivIzvodjaca" class="form-control" 
+                            placeholder="Naziv izvodjaca"[(ngModel)]="pjesma.nazivIzvodjaca"  #nazivIzvodjaca="ngModel">
                    </div>
                 </div>
               <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="url">URL</label>
                     <div class="col-md-9">
                         <input type="text" id="url" name="url" class="form-control" placeholder="url pjesme"
-                        [(ngModel)]="pjesma.url"#url="ngModel">     
+                        [(ngModel)]="pjesma.url"#url="ngModel" [ngModelOptions]="{standalone: true}">     
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="ocjena">Ocjena</label>
                     <div class="col-md-9">
                         <input type="number" id="ocjena" name="ocjena" class="form-control" placeholder="ocjena"
-                        [(ngModel)]="pjesma.ocjena" #ocjena="ngModel" >
+                        [(ngModel)]="pjesma.ocjena" #ocjena="ngModel" [ngModelOptions]="{standalone: true}">
                   </div>
                 </div>
                 <div class="form-group row">
@@ -89,8 +90,8 @@
                             <label>
                                 <input class="form-check-input" type="checkbox" name="favorit" id="favorit"
                                 [(ngModel)]="pjesma.favorit" #favorit="ngModel">
-                                <span *ngIf="!PjesmeList.status">DA</span>
-                                <span *ngIf="PjesmeList.status">NE</span>
+                                <span *ngIf="!pjesma.favorit">DA</span>
+                                <span *ngIf="pjesma.favorit">NE</span>
                             </label>
                         </div>
                     </div>
@@ -106,18 +107,21 @@
                     <label class="col-md-3 col-form-label" for="datumEditovanja">Datum editovanja</label>
                     <div class="col-md-9">
                         <input id="datumEditovanja" name="datumEditovanja" class="form-control"
-                            placeholder="Datum editovanja"[(ngModel)]="pjesma.datumEditovanja"#datumEditovanja="ngModel">
+                            placeholder="Datum editovanja"[(ngModel)]="pjesma.datumEditovanja" #datumEditovanja="ngModel">
                     </div>
                 </div>
-                <div class="form-group row">
+    
+                  <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="kategorije" >Kategorija</label>
                     <div class="col-md-9">
-                      <select formControlName="nazivKategorije"  [(ngModel)]="pjesma.kategorijaID" >
-                        <option value="" selected>Odaberi</option>
-                        <option *ngFor="let k of kategorije"value="{{k.kategorijaID}}" >{{k.nazivKategorije}}</option>
-                      </select>                
+                      <select id="kategorije" name="kategorije" class="form-control" [(ngModel)]="pjesma.kategorijaID" required  #statusPredmeta="ngModel">
+                        <option value="" selected >--Odaberite--</option>
+                        <option value="{{k.kategorijaID}" *ngFor="let k of kategorije ">{{k.nazivKategorije}} </option>
+                        
+                      </select>
+                   
                     </div>
-                  </div>
+                  </div> 
                 </form>
             </div>
         </div>
