--- a/angMuzickaLista/src/app/pjesma/pjesma.component.css
+++ b/angMuzickaLista/src/app/pjesma/pjesma.component.css
@@ -12,13 +12,16 @@
   h2{
     margin-left:90px;
     color: white;
-    padding-top: 20px;}
+    padding-top: 20px;
+    font-family:sans-serif;
+}
   .openn{
    margin-left: 35%;
-   margin-top: 30px;}
-
+   margin-top: 2%;
+   margin-bottom:3%;
+}
   .table-responsive {
-  margin: 30px 0;
+  margin: 0;
   background-color:white;
   max-width: 1200px;
   margin-left: 7%;
