--- a/angMuzickaLista/src/app/pjesma/pjesma.component.html
+++ b/angMuzickaLista/src/app/pjesma/pjesma.component.html
@@ -1,3 +1,4 @@
+
 <div class="all">
     <div id="headerDiv" class="table-title">
         <div class="row">
@@ -35,7 +36,7 @@
                 </ng-template>
                 <td>{{ dataItem.datumUnos | date: 'dd-MM-yyyy' }}</td>
                 <td>{{ dataItem.datumEditovanja | date: 'dd-MM-yyyy' }}</td>
-                <td>{{ dataItem.kategorije.nazivKategorije}}</td>
+                <td>{{dataItem.kategorije.nazivKategorije}}</td>
                 <td id="ikonice"> 
                     <a href="#"  style="margin-right: 5px;"  (click)="openEditModal(mymodal,dataItem)"> <i class="material-icons" style="font-size: 24px;color:#FFC107;">&#xE254;</i></a>
                     <a herf="#"  (click)="deletePut(dataItem)"> <i class="material-icons" style="font-size: 24px;color:#E34724;">&#xE872;</i> </a><td>
@@ -108,15 +109,14 @@
                         <input id="datumEditovanja" name="datumEditovanja" class="form-control"
                             placeholder="Datum editovanja"[(ngModel)]="pjesma.datumEditovanja" #datumEditovanja="ngModel">
                     </div>
-                </div>
-    
+                </div>  
                   <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="kategorije" >Kategorija</label>
                     <div class="col-md-9">
-                      <select id="kategorije" name="kategorije" class="form-control" [(ngModel)]="pjesma.kategorijaID"   #kategorijee="ngModel">
+                      <select id="kategorije" name="kategorije" class="form-control" [(ngModel)]="pjesma.kategorijaID" required  #statusPredmeta="ngModel">
                         <option value="" selected >--Odaberite--</option>
-                        <option value="{{k.kategorijaID}" *ngFor="let k of kategorije ">{{k.nazivKategorije}} </option>             
-                      </select>
+                        <option value="{{k.kategorijaID}}" *ngFor="let k of kategorije ">{{k.nazivKategorije}} </option>              
+                      </select>                  
                     </div>
                   </div> 
                 </form>
@@ -124,7 +124,8 @@
         </div>
     </div>
     <div class="modal-footer">        
-         <button type="submit" class="btn btn-sm btn-primary"  (click)="save()"  ><i class="fa fa-dot-circle-o"></i> Sačuvaj</button>   
+         <button type="submit" class="btn btn-sm btn-primary"  (click)="save()"  [disabled]="!createForm.valid"><i class="fa fa-dot-circle-o"></i> Sačuvaj</button>   
          <button type="reset" class="btn btn-sm btn-danger" (click)="modal.close('Save click')"><i class="fa fa-ban"></i> Odustani</button>
         </div> 
 </ng-template>
+
