--- a/angMuzickaLista/src/app/pjesma/pjesma.component.html
+++ b/angMuzickaLista/src/app/pjesma/pjesma.component.html
@@ -102,14 +102,14 @@
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="datumUnos">Datum unosa</label>
                     <div class="col-md-9">
-                        <input id="datumUnos" name="datumUnos" class="form-control" placeholder="Datum unosa"
+                        <input id="datumUnos" type="date" name="datumUnos" class="form-control" placeholder="Datum unosa"
                         [(ngModel)]="pjesma.datumUnos" #datumUnos="ngModel">
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="datumEditovanja">Datum editovanja</label>
                     <div class="col-md-9">
-                        <input id="datumEditovanja" name="datumEditovanja" class="form-control"
+                        <input id="datumEditovanja" type="date" name="datumEditovanja" class="form-control"
                             placeholder="Datum editovanja"[(ngModel)]="pjesma.datumEditovanja" #datumEditovanja="ngModel">
                     </div>
                 </div>
